--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -35,6 +35,8 @@
 
 		{#- Add the heading-anchors web component to the JavaScript bundle #}
 		{%- js %}{% include "node_modules/@zachleat/heading-anchors/heading-anchors.js" %}{% endjs %}
+
+		<meta name="monetag" content="cde6f1df7108d8608224ec242c075e6d">
 	</head>
 	<body>
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
